compile_error.txt


###################### OPENCL PROGRAM BUILD DEBUG OUTPUT ######################

C:\Users\farre\AppData\Local\Temp\comgr-d4b932\input\CompileSource:13:23: error: call to 'atomic_cmpxchg' is ambiguous
        current.u32 = atomic_cmpxchg((volatile __global ulong *)addr, expected.u32, next.u32);
                      ^~~~~~~~~~~~~~
C:\constructicon\builds\gfx\two\23.20\drivers\compute\build\native\Release\x64\lc\tools\support\<stdin>:13783:12: note: candidate function
int __ovld atomic_cmpxchg(volatile __global int *, int, int);
           ^
C:\constructicon\builds\gfx\two\23.20\drivers\compute\build\native\Release\x64\lc\tools\support\<stdin>:13784:13: note: candidate function
uint __ovld atomic_cmpxchg(volatile __global uint *, uint, uint);
            ^
1 error generated.
Error: Failed to compile source (from CL or HIP source to LLVM IR).
###############################################################################

